# rktd

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md
examples/: simple_downloader.rs
src/: config.rs  downloader.rs  extractor.rs  lib.rs
